--- a/index.html
+++ b/index.html
@@ -192,26 +192,27 @@
           <div id="content">
 
 
-            <h1>
-              LUX Project <small>documentation and reference pages</small>
-            </h1>
+              <h1>
+                LUX Project <small>documentation and reference pages</small>
+              </h1>
 
-            <div class="row" style="height:2em"></div>
+              <div class="row" style="height:2em"></div>
 
-              <p>Lua Utility eXTension is a Lua-only library compatible with Lua 5.1 through
+                <p>Lua Utility eXTension is a Lua-only library compatible with Lua 5.1 through
 Lua 5.3 which provides a handful of features for everyday Lua programming that
 cannot be found in the standard library of the language.</p>
 
-              <p><h2>Let us see</h2>
+                <p><h2>Let us see</h2>
 
 <p>Well that worked!?</p>
 </p>
 
 
-        </div> <!-- id="content" -->
-      </div> <!-- id="main" -->
-      <div id="about">
-      </div> <!-- id="about" -->
+          </div> <!-- id="content" -->
+        </div> <!-- id="main" -->
+        <div id="about">
+        </div> <!-- id="about" -->
+      </div>
       <div class="col-xs-0 col-md-2 col-lg-3"></div>
     </div> <!-- content row -->
   </div> <!-- class="container" -->
