--- a/modules/lux.info.html
+++ b/modules/lux.info.html
@@ -192,59 +192,62 @@
           <div id="content">
 
 
-            <h1>
-              lux.info
-              <small>a LUX module</small>
-            </h1>
+              <h1>
+                lux.info
+                <small>a LUX module</small>
+              </h1>
 
-            <div class="row" style="height:2em"></div>
+              <div class="row" style="height:2em"></div>
 
-            <p>
-              Module containing information regarding this LUX Project distribution.
-
-
-            </p>
+              <p>
+                Module containing information regarding this LUX Project distribution.
 
 
-
-              <h2>
-                <a name="Functions"></a>
-                Functions
-              </h2>
-
-              <dl class="function">
-                  <dt>
-                    <a name = "version"></a>
-                    <h3 class="text-primary">version&nbsp;()</h3>
-                  </dt>
-                  <dd>
-                    LUX&rsquo;s version.
+              </p>
 
 
 
 
-                      <h4>Returns:</h4>
-                        <ol>
 
-                            <kbd><strong class="text-type">
-                            any</strong></kbd>
-                            <p>
-                              A string with the current LUX version.
-                            </p>
+                <h2>
+                  <a name="Functions"></a>
+                  Functions
+                </h2>
 
-                        </ol>
-
-
-
-                  </dd>
-                  <div class="row" style="height:2em"></div>
-              </dl>
+                <dl class="function">
+                    <dt>
+                      <a name = "version"></a>
+                      <h3 class="text-primary">version&nbsp;()</h3>
+                    </dt>
+                    <dd>
+                      LUX&rsquo;s version.
 
 
-        </div> <!-- id="content" -->
-      </div> <!-- id="main" -->
-      <div id="about">
-      </div> <!-- id="about" -->
+
+
+                        <h4>Returns:</h4>
+                          <ol>
+
+                              <kbd><strong class="text-type">
+                              any</strong></kbd>
+                              <p>
+                                A string with the current LUX version.
+                              </p>
+
+                          </ol>
+
+
+
+                    </dd>
+                    <div class="row" style="height:2em"></div>
+                </dl>
+
+
+          </div> <!-- id="content" -->
+        </div> <!-- id="main" -->
+        <div id="about">
+        </div> <!-- id="about" -->
+      </div>
       <div class="col-xs-0 col-md-2 col-lg-3"></div>
     </div> <!-- content row -->
   </div> <!-- class="container" -->
