--- a/modules/lux.pack.html
+++ b/modules/lux.pack.html
@@ -192,26 +192,29 @@
           <div id="content">
 
 
-            <h1>
-              lux.pack
-              <small>a LUX module</small>
-            </h1>
+              <h1>
+                lux.pack
+                <small>a LUX module</small>
+              </h1>
 
-            <div class="row" style="height:2em"></div>
+              <div class="row" style="height:2em"></div>
 
-            <p>
-              A module-packing feature for more comfortable <a href="http://www.lua.org/manual/5.3/manual.html#pdf-require">require</a>-ing
-
-
-            </p>
+              <p>
+                A module-packing feature for more comfortable <a href="http://www.lua.org/manual/5.3/manual.html#pdf-require">require</a>-ing
 
 
+              </p>
 
 
-        </div> <!-- id="content" -->
-      </div> <!-- id="main" -->
-      <div id="about">
-      </div> <!-- id="about" -->
+
+
+
+
+          </div> <!-- id="content" -->
+        </div> <!-- id="main" -->
+        <div id="about">
+        </div> <!-- id="about" -->
+      </div>
       <div class="col-xs-0 col-md-2 col-lg-3"></div>
     </div> <!-- content row -->
   </div> <!-- class="container" -->
