--- a/modules/lux.portable.html
+++ b/modules/lux.portable.html
@@ -192,81 +192,84 @@
           <div id="content">
 
 
-            <h1>
-              lux.portable
-              <small>a LUX module</small>
-            </h1>
+              <h1>
+                lux.portable
+                <small>a LUX module</small>
+              </h1>
 
-            <div class="row" style="height:2em"></div>
+              <div class="row" style="height:2em"></div>
 
-            <p>
-              This module allows for portable programming in Lua.
-               It currently support versions 5.1 through 5.3.
-            </p>
-
-
-
-              <h2>
-                <a name="Functions"></a>
-                Functions
-              </h2>
-
-              <dl class="function">
-                  <dt>
-                    <a name = "loadWithEnv"></a>
-                    <h3 class="text-primary">loadWithEnv&nbsp;(f, env[, source])</h3>
-                  </dt>
-                  <dd>
-                    Re-loads a funcion with the given env and an optional chunk name.
-                     It is important to note that the reloaded funcion loses its closure.
-
-                        <h4>Parameters:</h4>
-                      <ul>
-                            <li>
-                              <kbd>
-                                <strong class="text-type">
-                                    any
-                                </strong>
-                                f</kbd>
-                              <p>
-                                 The original function
-                              </p>
-                              </li>
-                            <li>
-                              <kbd>
-                                <strong class="text-type">
-                                    any
-                                </strong>
-                                env</kbd>
-                              <p>
-                                 The new environment
-                              </p>
-                              </li>
-                            <li>
-                              <kbd>
-                                <strong class="text-type">
-                                    any
-                                </strong>
-                                source</kbd>
-                                (<em>optional</em>)
-                              <p>
-                                 The reloaded funciton chunk name
-                              </p>
-                              </li>
-                      </ul>
+              <p>
+                This module allows for portable programming in Lua.
+                 It currently support versions 5.1 through 5.3.
+              </p>
 
 
 
 
-                  </dd>
-                  <div class="row" style="height:2em"></div>
-              </dl>
+
+                <h2>
+                  <a name="Functions"></a>
+                  Functions
+                </h2>
+
+                <dl class="function">
+                    <dt>
+                      <a name = "loadWithEnv"></a>
+                      <h3 class="text-primary">loadWithEnv&nbsp;(f, env[, source])</h3>
+                    </dt>
+                    <dd>
+                      Re-loads a funcion with the given env and an optional chunk name.
+                       It is important to note that the reloaded funcion loses its closure.
+
+                          <h4>Parameters:</h4>
+                        <ul>
+                              <li>
+                                <kbd>
+                                  <strong class="text-type">
+                                      any
+                                  </strong>
+                                  f</kbd>
+                                <p>
+                                   The original function
+                                </p>
+                                </li>
+                              <li>
+                                <kbd>
+                                  <strong class="text-type">
+                                      any
+                                  </strong>
+                                  env</kbd>
+                                <p>
+                                   The new environment
+                                </p>
+                                </li>
+                              <li>
+                                <kbd>
+                                  <strong class="text-type">
+                                      any
+                                  </strong>
+                                  source</kbd>
+                                  (<em>optional</em>)
+                                <p>
+                                   The reloaded funciton chunk name
+                                </p>
+                                </li>
+                        </ul>
 
 
-        </div> <!-- id="content" -->
-      </div> <!-- id="main" -->
-      <div id="about">
-      </div> <!-- id="about" -->
+
+
+                    </dd>
+                    <div class="row" style="height:2em"></div>
+                </dl>
+
+
+          </div> <!-- id="content" -->
+        </div> <!-- id="main" -->
+        <div id="about">
+        </div> <!-- id="about" -->
+      </div>
       <div class="col-xs-0 col-md-2 col-lg-3"></div>
     </div> <!-- content row -->
   </div> <!-- class="container" -->
