--- a/modules/lux.test.html
+++ b/modules/lux.test.html
@@ -192,63 +192,66 @@
           <div id="content">
 
 
-            <h1>
-              lux.test
-              <small>a LUX module</small>
-            </h1>
+              <h1>
+                lux.test
+                <small>a LUX module</small>
+              </h1>
 
-            <div class="row" style="height:2em"></div>
+              <div class="row" style="height:2em"></div>
 
-            <p>
-              LUX&rsquo;s testing module.
-
-
-            </p>
+              <p>
+                LUX&rsquo;s testing module.
 
 
-
-              <h2>
-                <a name="Functions"></a>
-                Functions
-              </h2>
-
-              <dl class="function">
-                  <dt>
-                    <a name = "unit"></a>
-                    <h3 class="text-primary">unit&nbsp;(unit_name)</h3>
-                  </dt>
-                  <dd>
-                    Runs an unit test.
-
-
-
-                        <h4>Parameters:</h4>
-                      <ul>
-                            <li>
-                              <kbd>
-                                <strong class="text-type">
-                                    any
-                                </strong>
-                                unit_name</kbd>
-                              <p>
-
-
-                              </p>
-                              </li>
-                      </ul>
+              </p>
 
 
 
 
-                  </dd>
-                  <div class="row" style="height:2em"></div>
-              </dl>
+
+                <h2>
+                  <a name="Functions"></a>
+                  Functions
+                </h2>
+
+                <dl class="function">
+                    <dt>
+                      <a name = "unit"></a>
+                      <h3 class="text-primary">unit&nbsp;(unit_name)</h3>
+                    </dt>
+                    <dd>
+                      Runs an unit test.
 
 
-        </div> <!-- id="content" -->
-      </div> <!-- id="main" -->
-      <div id="about">
-      </div> <!-- id="about" -->
+
+                          <h4>Parameters:</h4>
+                        <ul>
+                              <li>
+                                <kbd>
+                                  <strong class="text-type">
+                                      any
+                                  </strong>
+                                  unit_name</kbd>
+                                <p>
+
+
+                                </p>
+                                </li>
+                        </ul>
+
+
+
+
+                    </dd>
+                    <div class="row" style="height:2em"></div>
+                </dl>
+
+
+          </div> <!-- id="content" -->
+        </div> <!-- id="main" -->
+        <div id="about">
+        </div> <!-- id="about" -->
+      </div>
       <div class="col-xs-0 col-md-2 col-lg-3"></div>
     </div> <!-- content row -->
   </div> <!-- class="container" -->
