--- a/modules/lux.color.html
+++ b/modules/lux.color.html
@@ -192,16 +192,16 @@
           <div id="content">
 
 
-            <h1>
-              lux.color
-              <small>a LUX module</small>
-            </h1>
+              <h1>
+                lux.color
+                <small>a LUX module</small>
+              </h1>
 
-            <div class="row" style="height:2em"></div>
+              <div class="row" style="height:2em"></div>
 
-            <p>
-              LUX&rsquo;s terminal utility module.
-               <p>
+              <p>
+                LUX&rsquo;s terminal utility module.
+                 <p>
  The terminal output functions take strings with formatted colors as
  arguments. That means sush string may have a color tag. There are three types
  of color tags: attributes, foreground and background colors. Tags must be
@@ -245,79 +245,82 @@
   <li><code>oncyan</code></li>
   <li><code>onwhite</code></li>
   </ul>
-            </p>
-
-
-
-              <h2>
-                <a name="Functions"></a>
-                Functions
-              </h2>
-
-              <dl class="function">
-                  <dt>
-                    <a name = "terminal.line"></a>
-                    <h3 class="text-primary">terminal.line&nbsp;(text)</h3>
-                  </dt>
-                  <dd>
-                    Print a line with formatted colors.
-
-
-
-                        <h4>Parameters:</h4>
-                      <ul>
-                            <li>
-                              <kbd>
-                                <strong class="text-type">
-                                    any
-                                </strong>
-                                text</kbd>
-                              <p>
-                                 A string possibly containing color tags.
-                              </p>
-                              </li>
-                      </ul>
+              </p>
 
 
 
 
-                  </dd>
-                  <div class="row" style="height:2em"></div>
-                  <dt>
-                    <a name = "terminal.write"></a>
-                    <h3 class="text-primary">terminal.write&nbsp;(text)</h3>
-                  </dt>
-                  <dd>
-                    Writes to the standard output with formatted colors.
+
+                <h2>
+                  <a name="Functions"></a>
+                  Functions
+                </h2>
+
+                <dl class="function">
+                    <dt>
+                      <a name = "terminal.line"></a>
+                      <h3 class="text-primary">terminal.line&nbsp;(text)</h3>
+                    </dt>
+                    <dd>
+                      Print a line with formatted colors.
 
 
 
-                        <h4>Parameters:</h4>
-                      <ul>
-                            <li>
-                              <kbd>
-                                <strong class="text-type">
-                                    any
-                                </strong>
-                                text</kbd>
-                              <p>
-                                 A string possibly containing color tags.
-                              </p>
-                              </li>
-                      </ul>
+                          <h4>Parameters:</h4>
+                        <ul>
+                              <li>
+                                <kbd>
+                                  <strong class="text-type">
+                                      any
+                                  </strong>
+                                  text</kbd>
+                                <p>
+                                   A string possibly containing color tags.
+                                </p>
+                                </li>
+                        </ul>
 
 
 
 
-                  </dd>
-                  <div class="row" style="height:2em"></div>
-              </dl>
+                    </dd>
+                    <div class="row" style="height:2em"></div>
+                    <dt>
+                      <a name = "terminal.write"></a>
+                      <h3 class="text-primary">terminal.write&nbsp;(text)</h3>
+                    </dt>
+                    <dd>
+                      Writes to the standard output with formatted colors.
 
 
-        </div> <!-- id="content" -->
-      </div> <!-- id="main" -->
-      <div id="about">
-      </div> <!-- id="about" -->
+
+                          <h4>Parameters:</h4>
+                        <ul>
+                              <li>
+                                <kbd>
+                                  <strong class="text-type">
+                                      any
+                                  </strong>
+                                  text</kbd>
+                                <p>
+                                   A string possibly containing color tags.
+                                </p>
+                                </li>
+                        </ul>
+
+
+
+
+                    </dd>
+                    <div class="row" style="height:2em"></div>
+                </dl>
+
+
+          </div> <!-- id="content" -->
+        </div> <!-- id="main" -->
+        <div id="about">
+        </div> <!-- id="about" -->
+      </div>
       <div class="col-xs-0 col-md-2 col-lg-3"></div>
     </div> <!-- content row -->
   </div> <!-- class="container" -->
