--- a/modules/stream.html
+++ b/modules/stream.html
@@ -192,26 +192,29 @@
           <div id="content">
 
 
-            <h1>
-              stream
-              <small>a LUX module</small>
-            </h1>
+              <h1>
+                stream
+                <small>a LUX module</small>
+              </h1>
 
-            <div class="row" style="height:2em"></div>
+              <div class="row" style="height:2em"></div>
 
-            <p>
-              This module holds classes that represent streams of data.
-
-
-            </p>
+              <p>
+                This module holds classes that represent streams of data.
 
 
+              </p>
 
 
-        </div> <!-- id="content" -->
-      </div> <!-- id="main" -->
-      <div id="about">
-      </div> <!-- id="about" -->
+
+
+
+
+          </div> <!-- id="content" -->
+        </div> <!-- id="main" -->
+        <div id="about">
+        </div> <!-- id="about" -->
+      </div>
       <div class="col-xs-0 col-md-2 col-lg-3"></div>
     </div> <!-- content row -->
   </div> <!-- class="container" -->
