--- a/prototypes/lux.class.html
+++ b/prototypes/lux.class.html
@@ -192,202 +192,242 @@
           <div id="content">
 
 
-            <h1>
-              lux.class
-              <small>a LUX prototype</small>
-            </h1>
+              <h1>
+                lux.class
+                <small>a LUX prototype</small>
+              </h1>
 
-            <div class="row" style="height:2em"></div>
+              <div class="row" style="height:2em"></div>
 
-            <p>
-              A class-based implementation object oriented programming.
-                Ironically, this is actually a prototype, which means it inherits from
-  <a href="../prototypes/lux.prototype.html#">lux.prototype</a>, but otherwise provides its own mechanism for OOP.</p>
-
-<p>  Be sure to check <a href="../prototypes/lux.class.html#class:instance">instance</a>, <a href="../prototypes/lux.class.html#class:inherit">inherit</a> and <a href="../prototypes/lux.class.html#class:super">super</a> usages.
-            </p>
-
-
-
-              <h2>
-                <a name="Functions"></a>
-                Functions
-              </h2>
-
-              <dl class="function">
-                  <dt>
-                    <a name = "class:instance"></a>
-                    <h3 class="text-primary">class:instance&nbsp;(obj, ...)</h3>
-                  </dt>
-                  <dd>
-                    Defines how an instance of the class should be constructed.
+              <p>
+                A class-based implementation object oriented programming.
+                  Ironically, this is actually a prototype, which means it inherits from
+  <a href="../prototypes/lux.prototype.html#">lux.prototype</a>, but otherwise provides its own mechanism for OOP.
+  Be sure to check <a href="../prototypes/lux.class.html#class:instance">instance</a>, <a href="../prototypes/lux.class.html#class:inherit">inherit</a> and <a href="../prototypes/lux.class.html#class:super">super</a> usages.
+              </p>
 
 
 
-                        <h4>Parameters:</h4>
-                      <ul>
-                            <li>
-                              <kbd>
-                                <strong class="text-type">
-                                    any
-                                </strong>
-                                obj</kbd>
-                              <p>
-                                 The to-be-constructed object
-                              </p>
-                              </li>
-                            <li>
-                              <kbd>
-                                <strong class="text-type">
-                                    any
-                                </strong>
-                                ...</kbd>
-                              <p>
-                                 Any arguments required by the construction
-                              </p>
-                              </li>
-                      </ul>
+                <h4>Usage:</h4>
+                <ul>
+                    <pre class="example"><span class="keyword">local</span> MyClass = <span class="global">require</span> <span class="string">'lux.class'</span> :new{}</pre>
+                </ul>
 
 
-                      <h4>Usage:</h4>
-                      <ul>
+                <h2>
+                  <a name="Functions"></a>
+                  Functions
+                </h2>
 
-                          <pre class="example">
+                <dl class="function">
+                    <dt>
+                      <a name = "class:instance"></a>
+                      <h3 class="text-primary">class:instance&nbsp;(obj, ...)</h3>
+                    </dt>
+                    <dd>
+                      Defines how an instance of the class should be constructed.
+                        This function is supposed to only be overriden, not called from the user&rsquo;s
+  side. By populating the <code>obj</code> parameter provided in this
+  factory-like strategy method is what creates class instances in this OOP
+  feature.
+
+                          <h4>Parameters:</h4>
+                        <ul>
+                              <li>
+                                <kbd>
+                                  <strong class="text-type">
+                                      <span class="type">object</span>
+                                  </strong>
+                                  obj</kbd>
+                                <p>
+                                   The to-be-constructed object
+                                </p>
+                                </li>
+                              <li>
+                                <kbd>
+                                  <strong class="text-type">
+                                      any
+                                  </strong>
+                                  ...</kbd>
+                                <p>
+                                   Arguments required by the construction
+                                </p>
+                                </li>
+                        </ul>
+
+
+                        <h4>Usage:</h4>
+                        <ul>
+
+                            <pre class="example">
   <span class="keyword">local</span> MyClass = <span class="global">require</span> <span class="string">'lux.class'</span> :new{}
-  <span class="keyword">function</span> MyClass:instance (obj)
+  <span class="keyword">function</span> MyClass:instance (obj, x)
     <span class="keyword">local</span> a_number = <span class="number">42</span>
     <span class="keyword">function</span> obj:show ()
-      <span class="global">print</span>(a_number)
+      <span class="global">print</span>(a_number + x)
     <span class="keyword">end</span>
   <span class="keyword">end</span></pre>
 
-                      </ul>
+                        </ul>
 
 
-                  </dd>
-                  <div class="row" style="height:2em"></div>
-                  <dt>
-                    <a name = "class:inherit"></a>
-                    <h3 class="text-primary">class:inherit&nbsp;(another_class)</h3>
-                  </dt>
-                  <dd>
-                    Makes this class inherit from another.
-                      It is necessary to call <code>self:super(obj, &hellip;)</code> inside this class'
-  <a href="../prototypes/lux.class.html#class:instance">instance</a> definition method.
+                    </dd>
+                    <div class="row" style="height:2em"></div>
+                    <dt>
+                      <a name = "class:inherit"></a>
+                      <h3 class="text-primary">class:inherit&nbsp;(another_class)</h3>
+                    </dt>
+                    <dd>
+                      Makes this class inherit from another.
+                        This guarantess that instances from the former are also instances from the
+  latter. The semantics differs from that of inheritance through prototyping!
+  Also, it is necessary to call <a href="../prototypes/lux.class.html#class:super">super</a> inside the current class'
+  <a href="../prototypes/lux.class.html#class:instance">instance</a> definition method since there is no way of guessing how the
+  parent class' constructor should be called.
 
-                        <h4>Parameters:</h4>
-                      <ul>
-                            <li>
-                              <kbd>
-                                <strong class="text-type">
-                                    any
-                                </strong>
-                                another_class</kbd>
-                              <p>
-                                 The being inherited from
-                              </p>
-                              </li>
-                      </ul>
+                          <h4>Parameters:</h4>
+                        <ul>
+                              <li>
+                                <kbd>
+                                  <strong class="text-type">
+                                      <span class="type">class</span>
+                                  </strong>
+                                  another_class</kbd>
+                                <p>
+                                   The class being inherited from
+                                </p>
+                                </li>
+                        </ul>
 
 
-                      <h4>Usage:</h4>
-                      <ul>
+                        <h4>Usage:</h4>
+                        <ul>
 
-                          <pre class="example">
+                            <pre class="example">
   <span class="keyword">local</span> class = <span class="global">require</span> <span class="string">'lux.class'</span>
   <span class="keyword">local</span> ParentClass = class:new{}
   <span class="keyword">local</span> ChildClass = class:new{}
   ChildClass:inherit(ParentClass)</pre>
 
-                      </ul>
+                        </ul>
 
+                        <h4>See also:</h4>
+                        <ul>
 
-                  </dd>
-                  <div class="row" style="height:2em"></div>
-                  <dt>
-                    <a name = "class:__call"></a>
-                    <h3 class="text-primary">class:__call&nbsp;(...)</h3>
-                  </dt>
-                  <dd>
-                    The class constructor.
+                            <a href="../prototypes/lux.class.html#class:super">
+                              class:super
+                            </a>
 
+                        </ul>
 
+                    </dd>
+                    <div class="row" style="height:2em"></div>
+                    <dt>
+                      <a name = "class:__call"></a>
+                      <h3 class="text-primary">class:__call&nbsp;(...)</h3>
+                    </dt>
+                    <dd>
+                      The class constructor.
+                        This is how someone actually instantiates objects from this class system.
+  After having created a new class and defined its <a href="../prototypes/lux.class.html#class:instance">instance</a> method, calling
+  the class itself behaves as expected by calling the constructor that will
+  use the <a href="../prototypes/lux.class.html#class:instance">instance</a> method to create the object.
 
-                        <h4>Parameters:</h4>
-                      <ul>
-                            <li>
-                              <kbd>
-                                <strong class="text-type">
-                                    any
-                                </strong>
-                                ...</kbd>
+                          <h4>Parameters:</h4>
+                        <ul>
+                              <li>
+                                <kbd>
+                                  <strong class="text-type">
+                                      any
+                                  </strong>
+                                  ...</kbd>
+                                <p>
+                                   The constructor parameters as specified in the <a href="../prototypes/lux.class.html#class:instance">instance</a>
+                                </p>
+                                </li>
+                        </ul>
+
+                        <h4>Returns:</h4>
+                          <ol>
+
+                              <kbd><strong class="text-type">
+                              <span class="type">object</span></strong></kbd>
                               <p>
-                                 The constructor parameters as specified in <a href="../prototypes/lux.class.html#class:instance">instance</a>
+                                A new instance from the current class.
+  definition
                               </p>
-                              </li>
-                      </ul>
+
+                          </ol>
 
 
 
-
-                  </dd>
-                  <div class="row" style="height:2em"></div>
-                  <dt>
-                    <a name = "class:super"></a>
-                    <h3 class="text-primary">class:super&nbsp;(obj, ...)</h3>
-                  </dt>
-                  <dd>
-                    Calls the parent class' constructor.
-                      Should only be called inside this class' <a href="../prototypes/lux.class.html#class:instance">instance</a> definition method when
+                    </dd>
+                    <div class="row" style="height:2em"></div>
+                    <dt>
+                      <a name = "class:super"></a>
+                      <h3 class="text-primary">class:super&nbsp;(obj, ...)</h3>
+                    </dt>
+                    <dd>
+                      Calls the parent class' constructor.
+                        Should only be called inside this class' <a href="../prototypes/lux.class.html#class:instance">instance</a> definition method when
   it inherits from another class.
 
-                        <h4>Parameters:</h4>
-                      <ul>
-                            <li>
-                              <kbd>
-                                <strong class="text-type">
-                                    any
-                                </strong>
-                                obj</kbd>
-                              <p>
-                                 The object being constructed by the child class
-                              </p>
-                              </li>
-                            <li>
-                              <kbd>
-                                <strong class="text-type">
-                                    any
-                                </strong>
-                                ...</kbd>
-                              <p>
-                                 The parent class' constructor parameters
-                              </p>
-                              </li>
-                      </ul>
+                          <h4>Parameters:</h4>
+                        <ul>
+                              <li>
+                                <kbd>
+                                  <strong class="text-type">
+                                      <span class="type">object</span>
+                                  </strong>
+                                  obj</kbd>
+                                <p>
+                                   The object being constructed by the child class
+                                </p>
+                                </li>
+                              <li>
+                                <kbd>
+                                  <strong class="text-type">
+                                      any
+                                  </strong>
+                                  ...</kbd>
+                                <p>
+                                   The parent class' constructor parameters
+                                </p>
+                                </li>
+                        </ul>
 
 
-                      <h4>Usage:</h4>
-                      <ul>
+                        <h4>Usage:</h4>
+                        <ul>
 
-                          <pre class="example">
+                            <pre class="example">
   <span class="comment">-- After ChildClass inherited ParentClass
 </span>  <span class="keyword">function</span> ChildClass:instance (obj, x, y)
     self:super(obj, x + y) <span class="comment">-- parent's constructor parameters
 </span>    <span class="comment">-- Finish instancing
 </span>  <span class="keyword">end</span></pre>
 
-                      </ul>
+                        </ul>
+
+                        <h4>See also:</h4>
+                        <ul>
+
+                            <a href="../prototypes/lux.class.html#class:inherit">
+                              class:inherit
+                            </a>
+
+                        </ul>
+
+                    </dd>
+                    <div class="row" style="height:2em"></div>
+                </dl>
 
 
-                  </dd>
-                  <div class="row" style="height:2em"></div>
-              </dl>
-
-
-        </div> <!-- id="content" -->
-      </div> <!-- id="main" -->
-      <div id="about">
-      </div> <!-- id="about" -->
+          </div> <!-- id="content" -->
+        </div> <!-- id="main" -->
+        <div id="about">
+        </div> <!-- id="about" -->
+      </div>
       <div class="col-xs-0 col-md-2 col-lg-3"></div>
     </div> <!-- content row -->
   </div> <!-- class="container" -->
